# holo-table

./: .gitignore  README.md  pyproject.toml
notebooks/: landmarker_01.ipynb  pinch_01.ipynb
src/holo_table/: __init__.py
src/holo_table/app/: gui_receiver.py  gui_sender.py  sender.py  streamlit_fractal.py  streamlit_receiver.py  streamlit_sender.py
src/holo_table/landmark/: compute.py  dist.py  drawing.py
src/holo_table/pinch/: tracker.py
src/holo_table/socket/: socket.py
src/holo_table/utils/: cv.py  data.py  mediapipe.py  np.py  plt.py  utils.py
src/holo_table/video/: frame.py  load.py
stubs/: hand_landmarker.pyi
