[tool.poetry]
name = "holo-table"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "holo_table", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
mediapipe = "^0.9.2.1"
black = "^23.3.0"
loguru = "^0.6.0"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
ipykernel = "^6.22.0"
opencv-contrib-python = "^4.7.0.72"
pandas = "^2.0.0"
pydocstyle = "^6.3.0"
isort = "^5.12.0"
tqdm = "^4.65.0"
ipympl = "^0.9.3"
click = "^8.1.3"
streamlit = "^1.22.0"
streamlit-webrtc = "^0.45.0"
plotly = "^5.14.1"
nbformat = "^5.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"
force_sort_within_sections = true
multi_line_output = 3

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
]
stubPath = "stubs"

[tool.poetry.scripts]
gui_sender = "holo_table.app.gui_sender:main"
gui_receiver = "holo_table.app.gui_receiver:main"
